Examples/fail/ambigous-list.stella
language core;

fn main() -> Nat {
    return {[], 1}.1 
}
